@@ -88,10 +88,10 @@ SUPPORT
 
 Several public email-based forums exist whose main topic is all
 implementations of the Muldis D language, especially the Muldis Rosetta
-reference implementation.  They exist so that Muldis D / Muldis Rosetta
-users can help each other, or that help coming from Muldis D / Muldis
-Rosetta developers can be said once to many people, rather than to each
-individually.  All of these you can reach via
+reference implementation, but also the Set::Relation module.  They exist so
+that Muldis D / Muldis Rosetta users can help each other, or that help
+coming from Muldis D / Muldis Rosetta developers can be said once to many
+people, rather than to each individually.  All of these you can reach via
 "http://mm.DarrenDuncan.net/mailman/listinfo".
 
 Alternately, you can purchase more advanced commercial support for various
