@@ -9,6 +9,8 @@
     * (Routines.pod, QRelation.pod, QSet.pod)  A few minor description
     updates or fixes.
 
+    * (D.pm, README)  Added mentions of Set::Relation in FORUMS/SUPPORT.
+
 2009-01-19  Darren Duncan <perl@DarrenDuncan.net>
 
     * Muldis::D version 0.58.0 is released on CPAN as
